--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ task wrapper(type: Wrapper) {
 
 apply plugin: 'java'
 apply plugin: 'war'
+apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
 
 sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
